[package]
name = "udiskstui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.27.0"
glib = "0.20.0"
humansize = "2.1.3"
nix = { version = "0.30.1", features = ["process", "user"] }
polkit-agent-rs = "0.3.0"
ratatui = "0.26.1"
secrecy = "0.10.3"
tokio = { version = "1.36.0", features = ["full"] }
zbus = { version = "4.1.2", default-features = false, features = ["tokio"] }
zbus_xml = "4.0.0"
zvariant = "4.0.2"
